--- a/Prunning_old.ipynb
+++ b/Prunning_old.ipynb
@@ -2,6 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torchvision\n",
+    "import torchvision.transforms as transforms\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import torch.optim as optim\n",
+    "from torch.autograd import Variable\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import time\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from torch.autograd import Variable\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import sampler\n",
+    "import torchvision.models as models\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic = torch.load(\"/home/drc/Downloads/cifar10-d875770b.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model =torch.utils.model_zoo.load_url('https://download.pytorch.org/models/vgg11-bbd30ac9.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'features.0.weight',\n",
+       " u'features.0.bias',\n",
+       " u'features.3.weight',\n",
+       " u'features.3.bias',\n",
+       " u'features.6.weight',\n",
+       " u'features.6.bias',\n",
+       " u'features.8.weight',\n",
+       " u'features.8.bias',\n",
+       " u'features.11.weight',\n",
+       " u'features.11.bias',\n",
+       " u'features.13.weight',\n",
+       " u'features.13.bias',\n",
+       " u'features.16.weight',\n",
+       " u'features.16.bias',\n",
+       " u'features.18.weight',\n",
+       " u'features.18.bias',\n",
+       " u'classifier.0.weight',\n",
+       " u'classifier.0.bias',\n",
+       " u'classifier.3.weight',\n",
+       " u'classifier.3.bias',\n",
+       " u'classifier.6.weight',\n",
+       " u'classifier.6.bias']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -227,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
